19-nginx-ingress/04-ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: perjerz.panot.me
    http:
      paths:
      - path: /
        backend:
          serviceName: echoserver
          servicePort: 80
  tls:
  - secretName: perjerz-secure-perjerz-panot-me-tls
    hosts:
    - perjerz.panot.me
